--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "formik": "^2.4.5",
     "hamburger-react": "^2.5.0",
+    "negotiator": "^0.6.3",
     "next": "14.1.0",
+    "next-i18n-router": "^5.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-select": "^5.8.0",
@@ -21,6 +23,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
+    "@types/negotiator": "^0.6.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
