--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "formik": "^2.4.5",
     "hamburger-react": "^2.5.0",
     "negotiator": "^0.6.3",
