--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18",
     "react-select": "^5.8.0",
     "swiper": "^11.0.6",
+    "swr": "^2.2.4",
     "yet-another-react-lightbox": "^3.17.0",
     "yup": "^1.3.3"
   },
